fix(blog-main): restore z-index property for blog main component

--- a/packages/web-qwik/src/components/blog/blog-main.module.scss
+++ b/packages/web-qwik/src/components/blog/blog-main.module.scss
@@ -1,5 +1,6 @@
 .blog-main {
   box-sizing: border-box;
+  z-index: 1;
   padding: 1rem;
   margin: 1rem 0;
   box-shadow: 0 0 0.125rem rgba(black, 0.2);
